--- a/src/MinhasFinancas.App/Views/TransacaoAdd.xaml
+++ b/src/MinhasFinancas.App/Views/TransacaoAdd.xaml
@@ -67,8 +67,7 @@
         <Button
             Text="Salvar"
             Margin="15, 0"
-            BackgroundColor="Black"
-            TextColor="White"
+            TextColor="Black"
             HorizontalOptions="Center"
         />
 
