--- a/src/MinhasFinancas.App/Views/TransacaoLista.xaml
+++ b/src/MinhasFinancas.App/Views/TransacaoLista.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MinhasFinancas.App.Views.TransacaoLista"
-             Title="TransacaoLista">
+             Title="Listagem">
     <VerticalStackLayout>
         <Label 
             Text="Lista de Transação"
