--- a/src/MinhasFinancas.App/Views/TransacaoAdd.xaml
+++ b/src/MinhasFinancas.App/Views/TransacaoAdd.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MinhasFinancas.App.Views.TransacaoAdd"
-             Title="TransacaoAdd">
+             Title="Adicionar">
     <VerticalStackLayout BackgroundColor="White" Spacing="10">
         <Border
             BackgroundColor="Black"
@@ -18,13 +18,17 @@
                     Grid.Column="0"
                     TextColor="White"
                 />
-                <Label
-                    Text="X"
+                <Image
+                    Source="close.png"
                     VerticalOptions="Center" 
                     HorizontalOptions="Center"
                     Grid.Column="1"
-                    TextColor="White"
-                />
+                    WidthRequest="17"
+                    HeightRequest="17">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
+                    </Image.GestureRecognizers>
+                </Image>
             </Grid>
         </Border>
 
